# self-healing-ecommerce-oms

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  pyproject.toml  requirements.txt  vercel.json
.claude/commands/: backlog-implement.md  implement.md  improvement-backlog.md  learnings.md  prd-grill-me.md  prd.md  verify.md
.github/workflows/: pr-hygiene.yml
api/: index.py
app/: api.py  data.py  db.py  generators.py  health.py  kb.py  limits.py  main.py  phones.py  regions.py  simulate.py  statuses.py  trigger.py  ui.py  validation.py  webhooks.py
app/agent/: act.py  github.py  graph.py  llm.py  recipes.py  schemas.py  trace.py
app/data/: catalog.json  phone_rules.json  regions.json  store.json
app/static/: index.html
db/migrations/: 001_init.sql  002_duplicate_of_references_orders.sql
docs/: build-plan.md  deploy.md  idea.md
docs/backlogs/: self-healing-oms-v1-backlog-2026-07-09.md
docs/prd/: demo-ui-v1.md  self-healing-oms-v1.md
docs/runbooks/: cancelled_order.md  duplicate_delivery.md  phone_format.md  unknown_region.md
docs/templates/: implementation-backlog-template.md
scripts/: launch_gate.py  migrate.py
tests/: conftest.py  test_agent.py  test_api.py  test_db.py  test_github.py  test_health.py  test_kb.py  test_limits.py  test_packaging.py  test_recipes.py  test_simulate.py  test_ui.py  test_webhook.py
