[project]
name = "self-healing-ecommerce-oms"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app", "api", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["app", "api", "tests"]
exclude = ["**/__pycache__", ".venv"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
